[gd_scene load_steps=2 format=3 uid="uid://bdesiystlxdb2"]

[ext_resource type="Script" path="res://addons/SimpleTODO/TODOItem.gd" id="1_ecqce"]

[node name="TODOItem" type="HBoxContainer"]
mouse_filter = 2
script = ExtResource("1_ecqce")

[node name="DragPanel" type="Panel" parent="."]
custom_minimum_size = Vector2(20, 0)
layout_mode = 2
tooltip_text = "Right-click to mark/unmark"
mouse_default_cursor_shape = 13

[node name="Text" type="TextEdit" parent="."]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
text = "TODO"
wrap_mode = 1
scroll_fit_content_height = true

[node name="Button" type="Button" parent="."]
layout_mode = 2
tooltip_text = "Delete Item"

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="gui_input" from="DragPanel" to="." method="drag_panel_input"]
[connection signal="text_changed" from="Text" to="Timer" method="start"]
[connection signal="pressed" from="Button" to="." method="delete_pressed"]
[connection signal="timeout" from="Timer" to="." method="request_save"]
